# ProjectComplexity

./: .gitignore  CMakeLists.txt  imgui.ini
src/: main.cpp
src/core/: CMakeLists.txt  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp
src/core/camera/: CMakeLists.txt  Camera2D.cpp  Camera2D.hpp
src/core/editor/: CMakeLists.txt  ItemDebugEditor.cpp  ItemDebugEditor.hpp  TileMapEditor.cpp  TileMapEditor.hpp  TileMapSerializer.cpp  TileMapSerializer.hpp
src/core/entities/: CMakeLists.txt  ComponentRegistry.hpp  ComponentStorage.hpp  Entity.hpp  EntityManager.hpp
src/core/entities/component/: AnimatedSpriteComponent.hpp  AnimationControllerComponent.hpp  CMakeLists.txt  CharacterStateComponent.hpp  CollisionComponent.hpp  ConveyorBeltComponent.hpp  ConveyorItemComponent.hpp  CraftingMachineComponent.hpp  FluidPipeComponent.hpp  FluidPortComponent.hpp  FluidPumpComponent.hpp  FluidTankComponent.hpp  InputComponent.hpp  InteractionComponent.hpp  InventoryComponent.hpp  MachineComponent.hpp  MachineFluidComponent.hpp  MachineFluidPortLinkComponent.hpp  MachineInventoryComponent.hpp  MinerComponent.hpp  PositionComponent.hpp  SpriteComponent.hpp  VelocityComponent.hpp
src/core/entities/component/robot/: CMakeLists.txt  RobotBrainComponent.hpp  RobotCarryComponent.hpp  RobotComponent.hpp
src/core/entities/systems/: AnimatedRenderSystem.cpp  AnimatedRenderSystem.hpp  AnimationStateSystem.cpp  AnimationStateSystem.hpp  AnimationSystem.cpp  AnimationSystem.hpp  CMakeLists.txt  CharacterStateSystem.cpp  CharacterStateSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ConveyorSystem.cpp  ConveyorSystem.hpp  CraftingSystem.cpp  CraftingSystem.hpp  FluidSystem.cpp  FluidSystem.hpp  InputSystem.cpp  InputSystem.hpp  InteractionSystem.cpp  InteractionSystem.hpp  MachineFluidIOSystem.cpp  MachineFluidIOSystem.hpp  MiningSystem.cpp  MiningSystem.hpp  MovementInputSystem.cpp  MovementInputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RobotSystem.cpp  RobotSystem.hpp
src/core/fluid/: CMakeLists.txt  FluidDatabase.cpp  FluidDatabase.hpp  FluidDefinition.hpp  FluidNetwork.hpp  FluidVolume.hpp
src/core/graphics/: AnimatedSprite.cpp  AnimatedSprite.hpp  AnimationLoader.cpp  AnimationLoader.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Sprite.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp
src/core/gui/: CMakeLists.txt  GUIDragContext.hpp  GUIElement.hpp  GUISystem.hpp
src/core/gui/craftingmachine/: GUIMachine.cpp  GUIMachine.hpp
src/core/gui/elements/: GUIButton.hpp  GUIDragPeview.hpp  GUIFluidSlot.hpp  GUIInventoryGrid.hpp  GUIPanel.hpp  GUIProgressBar.hpp  GUIText.hpp
src/core/inventory/: CMakeLists.txt  InventoryGrid.cpp  InventoryGrid.hpp  InventorySlot.hpp  ItemDatabase.cpp  ItemDatabase.hpp  ItemDefinition.hpp  ItemStack.hpp
src/core/machine/: CMakeLists.txt  MachineDatabase.cpp  MachineDatabase.hpp  MachineDefinition.hpp
src/core/map/: CMakeLists.txt  Tile.hpp  TileAnimationDatabase.cpp  TileAnimationDatabase.hpp  TileMap.cpp  TileMap.hpp  TileMapLayer.cpp  TileMapLayer.hpp  TileMetadataDatabase.cpp  TileMetadataDatabase.hpp
src/core/recipe/: CMakeLists.txt  RecipeDatabase.cpp  RecipeDatabase.hpp  RecipeDefinition.hpp  RecipeFluidStack.hpp  RecipeIngredient.hpp
src/core/robot/: CMakeLists.txt  RobotTask.hpp  RobotTaskBoard.cpp  RobotTaskBoard.hpp
src/core/robot/goap/: CMakeLists.txt  GoapAction.hpp  GoapPlanner.cpp  GoapPlanner.hpp  GoapState.hpp
src/core/screen/: CMakeLists.txt  IScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  ScreenContext.hpp  WorldScreen.cpp  WorldScreen.hpp
src/core/util/: CMakeLists.txt  MathUtil.hpp  PerlinNoise.hpp
src/core/world/: AnimationLibrary.hpp  CMakeLists.txt  ChunkManager.cpp  ChunkManager.hpp  ConveyorManager.cpp  ConveyorManager.hpp  EntityFactory.cpp  EntityFactory.hpp  FluidManager.cpp  FluidManager.hpp  TileMapGenerator.cpp  TileMapGenerator.hpp  World.cpp  World.hpp
src/core/world/contexts/: CMakeLists.txt  CraftingContext.hpp  FluidContext.hpp  MachineFluidIOContext.hpp
tools/data_editor/: CMakeLists.txt  main.cpp
(+26 files in other folders)
